-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0
-
None
-
Lustre Build: https://build.whamcloud.com/job/lustre-master/3806/
-
3
-
9223372036854775807
Usage message for "lnetctl set health_sensitivity" is:
# lnetctl set health_sensitivity
set health_sensitivity: sensitivity to failure
0 - turn off health evaluation
>0 - sensitivity value not more than 1000
However, with value greater than 1000, the command can also run successfully:
# lnetctl set health_sensitivity 2048
# lnetctl global show
global:
numa_range: 0
max_intf: 200
discovery: 1
retry_count: 0
transaction_timeout: 5
health_sensitivity: 2048 <------------ should no more than 1000
- mentioned in
-
Page Loading...